Изменил структуру проекта и добавил новые файлы.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
 cmake_minimum_required(VERSION 3.27)
 project(MOLR)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(MOLR src/main.cpp include/config.h
-        include/OneDimensional.h
-        src/OneDimensional.cpp
-        src/MultiDimensional.cpp
-        include/MultiDimensional.h)
+project(MOLR)
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+add_subdirectory(include)
+add_subdirectory(src)
