--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /cmake-build-debug
 /cmake-build-release
 /cmake-build-debug-visual-studio
+/cmake-build-release-visual-studio
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
