- Добавил возможность писать тесты CTest - Удалил config.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.27)
 project(MOLR)
 
+enable_testing()
+
 set(CMAKE_CXX_STANDARD 20)
 
 project(MOLR)
 
 add_subdirectory(include)
 add_subdirectory(src)
+add_subdirectory(tests)
