--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 project(MOLR)
 
-add_subdirectory(include)
+#add_subdirectory(include)
 add_subdirectory(src)
 add_subdirectory(tests)
